--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,11 @@ dependencies:
 
   security_keyboard: ^1.0.2
 
-  zoom_widget:
+  flutter_linkify: ^3.1.0
+  url_launcher: ^5.1.4
+  url_launcher_web: ^0.1.0
+
+#  zoom_widget:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
