--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: kids pyramid test
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -25,6 +25,9 @@ dependencies:
   flutter_linkify: ^3.1.0
   url_launcher: ^5.1.4
   url_launcher_web: ^0.1.0
+
+  vector_math: 2.0.8
+  arrow_path: ^1.0.0
 
 #  zoom_widget:
 
