--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,17 +20,18 @@ dependencies:
   flutter:
     sdk: flutter
 
-  security_keyboard: ^1.0.2
+  security_keyboard: ^1.0.3
 
-  flutter_linkify: ^3.1.0
-  url_launcher: ^5.1.4
-  url_launcher_web: ^0.1.0
+  flutter_linkify: '>=3.1.3 <4.0.0'
+  url_launcher: '>=5.4.5 <6.0.0'
+  url_launcher_web: '>=0.1.1+4 <2.0.0' # not sure if still needed for url launcher
+  share: '>=0.6.4+1 <2.0.0'
 
 #  zoom_widget:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+#  cupertino_icons: ^0.1.2
 
 dev_dependencies:
   flutter_test:
