--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   url_launcher: '>=5.4.5 <6.0.0'
   url_launcher_web: '>=0.1.1+4 <2.0.0' # not sure if still needed for url launcher
   share: '>=0.6.4+1 <2.0.0'
+  font_awesome_flutter: ^8.8.1
+  google_fonts: ^1.1.0
 
 #  zoom_widget:
 
