--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ environment:
   sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
+  build: ^1.3.0
+  build_runner: ^1.10.0
+
   flutter:
     sdk: flutter
 
@@ -39,6 +42,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+#builders:
+#  git_committed: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
