git commit info as the version for about dialog

--- a/.gitignore
+++ b/.gitignore
@@ -46,5 +46,6 @@ app.*.map.json
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
-
+# Other files
 /tools/.ipynb_checkpoints/
+/lib/git_info.g.dart
