--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,13 @@ description: matika do kapsy
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+
+# Seams to be better to use: flutter build appbundle --release --build-name=<git commit id> --build-number=x+1
+# or for .apk: flutter build apk --release --build-name=<git commit id> --build-number=x+1
+# that will be better for CI/CD
+# codemagic can provide BUILDNUMBER:
+# or we could use git rev-list HEAD --count for the ever increasing --build-number
+version: 1.0.0+2
 
 environment:
   sdk: ">=2.6.0 <3.0.0"
