--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -31,6 +31,5 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
-    </application
-        android:name="io.flutter.app.FlutterApplication">
+    </application>
 </manifest>
