--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ description: matika do kapsy
 version: 1.0.0+2
 
 environment:
-  sdk: ">=2.6.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -43,6 +43,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 #  cupertino_icons: ^0.1.2
+  collection: ^1.15.0-nullsafety.4
 
 dev_dependencies:
   flutter_test:
